--- a/smartweb/src/main/webapp/secured/pages/includes/fees-payment.xhtml
+++ b/smartweb/src/main/webapp/secured/pages/includes/fees-payment.xhtml
@@ -8,6 +8,7 @@
     <div class="row wow zoomIn">
         <div class="col-lg-4">
             <h:form id="feesPaymentForm">
+                <u><h3>Fees Payment</h3></u>
                 <h:panelGrid columns="2" class="spaced-form"> 
                     <span>Fees Amount: </span>
                     <h:outputText class="field-shade" value="#{feesController.fees.feesAmount}"/>
@@ -20,9 +21,8 @@
                 </h:panelGrid>
 
                 <div class="py-3">
-                    <p:commandButton value="#{feesController.optionText}" icon="#{msg.add_icon}" class="kbtn-info mx-2" action="#{feesController.savePayment()}" update=":feesPaymentTable, @form"/>
-
                     <p:commandButton value="#{msg.clear}" class="kbtn-default mx-3" icon="#{msg.clear_icon}" immediate="true" action="#{feesController.clearFeesPayment()}" update="@form"/>
+                    <p:commandButton value="#{feesController.optionText}" icon="#{msg.check_icon_circle}" class="kbtn-success mx-2" action="#{feesController.savePayment()}" update=":feesPaymentTable, @form"/>
                 </div>
             </h:form>
         </div>
